# classification

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  create_python_env.sh  package.xml  requirements.txt
config/: batch_processing.yaml
datasets/set01in/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
launch/: batch_processing.launch  classification.launch  real_time.launch  realtime.launch
msg/: Cluster.msg  ClusterClass.msg  ClusterCounts.msg  Pixel.msg  ProcessedImage.msg
pipelines/: .gitattributes  vzlusat-1.joblib
scripts/: batch.py  classification.py  realtime.py
scripts/batchProcessing/: methods.py
scripts/classifier/: classifier.py  featureSelection.py
scripts/dataManager/: DataContainer.py  DataManager.py
scripts/dataProcessing/: FeatureExtractor.py  ImagePreprocessor.py  extractionFcns.py  statistics.py
