<?xml version="1.0"?>
<package format="2">
  <name>rospix_classification</name>
  <version>0.0.0</version>
  <description>Tomas's package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="klaxalk@todo.todo">klaxalk</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>rospix</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>rospix</exec_depend>

  <export>
  </export>
</package>
