<?xml version="1.0"?>
<package format="2">

  <name>classification</name>
  <version>1.0.0</version>
  <description>ROS particle track classification pipeline for Timepix detectors</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>rospix</depend>
  <depend>message_runtime</depend>

  <export>
  </export>

</package>
